--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./main_page/main_structure/main_structure.css">
+    <link rel="stylesheet" href="./recurring_components/header/header.css">
+    <title>GameShelf</title>
 </head>
 
 <body>
